[tool.poetry]
name = "dtmf"
version = "1.0.0"
description = "Package for working with DTMF - a system for signaling over the voice band of a telephony system using multi-frequency tones."
authors = ["Gary DeReese <garydereese@sbcglobal.net>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
