[tool.poetry]
name = "dtmf"
version = "1.0.0"
description = "Package for working with DTMF - a system for signaling over the voice band of a telephony system using multi-frequency tones."
license = "MIT"
authors = ["Gary DeReese <garydereese@sbcglobal.net>"]
readme = "README.md"
repository = "https://github.com/gdereese/dtmf"
keywords = ["dtmf", "parser", "telephony", "voip"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.dev-dependencies]
pylint = "^3.3.1"
pytest = "^6.2.5"
numpy = "^2.1.3"
matplotlib = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
